ui/views/controls/menu/menu_pre_target_handler.h
@@ -1,56 +1,39 @@
-// Copyright 2016 The Chromium Authors. All rights reserved.
+// Copyright 2018 The Chromium Authors. All rights reserved.
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#ifndef UI_VIEWS_CONTROLS_MENU_PRE_TARGET_HANDLER_H_
-#define UI_VIEWS_CONTROLS_MENU_PRE_TARGET_HANDLER_H_
+#ifndef UI_VIEWS_CONTROLS_MENU_MENU_PRE_TARGET_HANDLER_H_
+#define UI_VIEWS_CONTROLS_MENU_MENU_PRE_TARGET_HANDLER_H_
 
-#include "ui/aura/window_observer.h"
-#include "ui/events/event_handler.h"
-#include "ui/views/views_export.h"
-#include "ui/wm/public/activation_change_observer.h"
+#include <memory>
 
-namespace aura {
-class Window;
-}  // namespace aura
+#include "base/macros.h"
 
 namespace views {
 
 class MenuController;
 class Widget;
 
-// MenuPreTargetHandler is used to observe activation changes, cancel events,
-// and root window destruction, to shutdown the menu.
-//
-// Additionally handles key events to provide accelerator support to menus.
-class VIEWS_EXPORT MenuPreTargetHandler : public wm::ActivationChangeObserver,
-                                          public aura::WindowObserver,
-                                          public ui::EventHandler {
+// A MenuPreTargetHandler is responsible for intercepting events destined for
+// another widget (the menu's owning widget) and letting the menu's controller
+// try dispatching them first.
+class MenuPreTargetHandler {
  public:
-  MenuPreTargetHandler(MenuController* controller, Widget* owner);
-  ~MenuPreTargetHandler() override;
+  virtual ~MenuPreTargetHandler() = default;
 
-  // aura::client:ActivationChangeObserver:
-  void OnWindowActivated(wm::ActivationChangeObserver::ActivationReason reason,
-                         aura::Window* gained_active,
-                         aura::Window* lost_active) override;
+  // There are separate implementations of this method for Aura platforms and
+  // for Mac.
+  static std::unique_ptr<MenuPreTargetHandler> Create(
+      MenuController* controller,
+      Widget* owner);
 
-  // aura::WindowObserver:
-  void OnWindowDestroying(aura::Window* window) override;
-
-  // ui::EventHandler:
-  void OnCancelMode(ui::CancelModeEvent* event) override;
-  void OnKeyEvent(ui::KeyEvent* event) override;
+ protected:
+  MenuPreTargetHandler() = default;
 
  private:
-  void Cleanup();
-
-  MenuController* controller_;
-  aura::Window* root_;
-
   DISALLOW_COPY_AND_ASSIGN(MenuPreTargetHandler);
 };
 
 }  // namespace views
 
-#endif  // UI_VIEWS_CONTROLS_MENU_PRE_TARGET_HANDLER_H_
+#endif  //  UI_VIEWS_CONTROLS_MENU_MENU_PRE_TARGET_HANDLER_H_
